# RetroLib

./: CMakeLists.txt  RetroLib.uplugin  conanfile.py  retrolib.natvis  sonar-project.properties
.github/workflows/: auto_build.yml
CMake/: EnableStandardLibraryModule.cmake
RetroLib/: CMakeLists.txt
RetroLib/include/RetroLib/: FunctionTraits.h  RetroLibMacros.h  TypeTraits.h
RetroLib/include/RetroLib/Casting/: ClassCast.h  Convert.h  DynamicCast.h  InstanceOf.h
RetroLib/include/RetroLib/Concepts/: Comparisons.h  CompleteType.h  Inheritance.h  Iterators.h  Nullability.h  OpaqueStorage.h  ParameterPacks.h  Pointers.h  Tuples.h
RetroLib/include/RetroLib/Functional/: BindBack.h  BindFunctor.h  BindMethod.h  CreateBinding.h  ExtensionMethods.h  FunctionalClosure.h  Invoke.h
RetroLib/include/RetroLib/Optionals/: AndThen.h  Filter.h  Get.h  IfPresent.h  IfPresentOrElse.h  IsSet.h  Optional.h  OptionalIterator.h  OptionalOperations.h  OrElse.h  OrElseGet.h  OrElseThrow.h  OrElseValue.h  PtrOrNull.h  To.h  Transform.h  Value.h
RetroLib/include/RetroLib/Ranges/: RangeBasics.h
RetroLib/include/RetroLib/Utils/: ForwardLike.h  NonPropagatingCache.h  OpaqueStorage.h  Operators.h  Polymorphic.h  UniqueAny.h  Unreachable.h  ValidPtr.h  Variant.h
RetroLib/src/: RetroLib.ixx  StlMock.ixx
Source/RetroLib/: RetroLib.Build.cs
Source/RetroLib/Private/: RetroLib.cpp  RetroLibUE.cpp
Source/RetroLib/Public/RetroLib/: FunctionTraits.h  RetroLib.ixx  RetroLibMacros.h
Source/RetroLib/Tests/: CMakeLists.txt  TestAdapter.h
Source/RetroLib/Tests/Casts/: TestCasts.cpp
Source/RetroLib/Tests/Functional/: DelegateBindingTest.cpp  TestBindings.cpp  TestExtensionMethods.cpp
Source/RetroLib/Tests/Optionals/: InstrusiveUnsetStateTest.cpp  OptionalIteratorTest.cpp  OptionalPipesTest.cpp  TestOptional.cpp  TestOptionalOperations.cpp  TestOptionalPipes.cpp
Source/RetroLib/Tests/Ranges/: GeneratorTest.cpp  ObjectViewTest.cpp  RangeConceptTests.cpp
Source/RetroLibTests/: CMakeLists.txt
Tests/: CMakeLists.txt
Tests/Casts/: TestCasts.cpp  TestInstanceOf.cpp
Tests/Functional/: TestBindBack.cpp  TestBindings.cpp  TestExtensionMethods.cpp  TestInvoke.cpp
Tests/Optionals/: OptionalIteratorTest.cpp  TestFilterOptional.cpp  TestOptional.cpp  TestOptionalOperations.cpp  TestOptionalPipes.cpp
Tests/Ranges/Algorithm/: RangesTerminalClosureTest.cpp  RangesToTest.cpp
Tests/Ranges/Views/: AnyViewTest.cpp  CacheLastTest.cpp  ConcatViewTest.cpp  GeneratorTest.cpp  TestRangeAdapters.cpp
Tests/Utils/: OperatorsTest.cpp  PolymorphicTest.cpp  TestValidPtr.cpp  UniqueAnyTest.cpp
(+110 files in other folders)
